# poll-app-django

./: README.md  docker-compose.yml  manage.py  pyproject.toml
poll_app_site/: asgi.py  settings.py  urls.py  wsgi.py
polls/: models.py  tests.py  views.py
polls/migrations/: 0001_initial.py
polls/templates/polls/: results.html
